deployments/k8s/Service.yaml
apiVersion: v1
kind: Service

metadata:
  name: datepop-career
  namespace: datepop

spec:
  ports:
    - protocol: TCP
      name: inbound
      port: 80
      targetPort: 3000
  selector:
    app: datepop-career
